--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ hytalix-*.tar
 # Ignore digested assets cache.
 /priv/static/cache_manifest.json
 
+/priv/servers
+
 # In case you use Node.js/npm, you want to ignore these.
 npm-debug.log
 /assets/node_modules/
