--- a/compose.yml
+++ b/compose.yml
@@ -6,30 +6,39 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      # POSTGRES_DB: hytalix_dev
-      POSTGRES_DB: hytalix_prod
+      POSTGRES_DB: hytalix
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
-  # docker exec -it hytalix_app /app/bin/hytalix eval "Hytalix.Release.migrate"
   app:
     build:
       context: .
       target: runner
     container_name: hytalix_app
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     ports:
       - "4000:4000"
+      - "5520:5520/udp"
     environment:
-      - DATABASE_URL=ecto://postgres:postgres@db/hytalix_prod
+      - DATABASE_URL=ecto://postgres:postgres@db/hytalix
       - SECRET_KEY_BASE=JfvgUDrb+P8Ow9NVlaadpj+YWL7pCJWZg+5TLY8M/O7G6OpEX6VXO2QJ5XlWsgr3
       - PHX_HOST=localhost
       - PHX_SERVER=true
       - PORT=4000
+      - HYTALIX_DATA_DIR=/app/data
+    volumes:
+      - server_data:/app/data
     restart: on-failure
 
 volumes:
   postgres_data:
+  server_data:
